--- a/notebooks/02_data_preprocessing.ipynb
+++ b/notebooks/02_data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2da9a463-f5ba-4671-aefa-7e498fb05038",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,11 @@
     "\n",
     "# Save the processed data\n",
     "pd.DataFrame(X_train.toarray(), columns=vectorizer.get_feature_names_out()).to_csv('../data/processed/train_preprocessed.csv', index=False)\n",
-    "pd.DataFrame(X_test.toarray(), columns=vectorizer.get_feature_names_out()).to_csv('../data/processed/test_preprocessed.csv', index=False)\n"
+    "pd.DataFrame(X_test.toarray(), columns=vectorizer.get_feature_names_out()).to_csv('../data/processed/test_preprocessed.csv', index=False)\n",
+    "\n",
+    "# Save the cleaned summary columns for future use\n",
+    "train_data[['summary_clean', 'severity']].to_csv('../data/processed/train_cleaned.csv', index=False)\n",
+    "test_data[['summary_clean']].to_csv('../data/processed/test_cleaned.csv', index=False)\n"
    ]
   }
  ],
@@ -55,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
