--- a/notebooks/04_model_evaluation.ipynb
+++ b/notebooks/04_model_evaluation.ipynb
@@ -14,6 +14,7 @@
     "from tensorflow.keras.models import load_model\n",
     "import numpy as np\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "\n",
     "# Load the preprocessed test data\n",
     "X_test = pd.read_csv('../data/processed/test_preprocessed.csv')\n",
@@ -36,7 +37,15 @@
     "test_data = pd.read_csv('../data/raw/bugs-test.csv')\n",
     "tokenizer = Tokenizer(num_words=5000, lower=True, split=' ')\n",
     "tokenizer.fit_on_texts(test_data['summary_clean'].values)\n",
-    "X_test_seq = tokenizer.texts_to_sequences(test\n"
+    "X_test_seq = tokenizer.texts_to_sequences(test_data['summary_clean'].values)\n",
+    "X_test_pad = pad_sequences(X_test_seq, maxlen=X_test_seq.shape[1])\n",
+    "\n",
+    "# Load the LSTM model\n",
+    "model = load_model('../models/lstm_model.h5')\n",
+    "lstm_pred = model.predict(X_test_pad)\n",
+    "lstm_pred_labels = np.argmax(lstm_pred, axis=1)\n",
+    "lstm_report = classification_report(y_test, lstm_pred_labels)\n",
+    "print(\"LSTM Report:\\n\", lstm_report)\n"
    ]
   }
  ],
