--- a/notebooks/05_generate_submission.ipynb
+++ b/notebooks/05_generate_submission.ipynb
@@ -13,6 +13,7 @@
     "from tensorflow.keras.models import load_model\n",
     "import numpy as np\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "\n",
     "# Load the preprocessed test data\n",
     "X_test = pd.read_csv('../data/processed/test_preprocessed.csv')\n",
