Fixed code again.

--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -80,13 +80,29 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Load the training data\n",
+    "# Load the training and testing data\n",
     "train_data = pd.read_csv('../data/raw/bugs-train.csv')\n",
+    "test_data = pd.read_csv('../data/raw/bugs-test.csv')\n",
     "\n",
-    "# Display basic information about the dataset\n",
-    "print(train_data.info())\n",
-    "print(train_data.describe())\n",
+    "# Display basic information about the training data\n",
+    "print(\"Train Data Info:\")\n",
+    "train_data.info()\n",
+    "print(\"\\nTrain Data Head:\")\n",
     "print(train_data.head())\n",
+    "\n",
+    "# Display basic information about the testing data\n",
+    "print(\"\\nTest Data Info:\")\n",
+    "test_data.info()\n",
+    "print(\"\\nTest Data Head:\")\n",
+    "print(test_data.head())\n",
+    "\n",
+    "# Check for missing values in the training data\n",
+    "print(\"\\nMissing Values in Train Data:\")\n",
+    "print(train_data.isnull().sum())\n",
+    "\n",
+    "# Check for missing values in the testing data\n",
+    "print(\"\\nMissing Values in Test Data:\")\n",
+    "print(test_data.isnull().sum())\n",
     "\n",
     "# Visualize the distribution of severity classes\n",
     "sns.countplot(x='severity', data=train_data)\n",
@@ -99,14 +115,7 @@
     "\n",
     "sns.histplot(train_data['summary_length'], bins=30, kde=True)\n",
     "plt.title('Distribution of Summary Lengths')\n",
-    "plt.show()\n",
-    "\n",
-    "# Save the exploratory data analysis report\n",
-    "with open('../reports/EDA_report.txt', 'w') as f:\n",
-    "    f.write('EDA Report\\n\\n')\n",
-    "    f.write(str(train_data.describe()))\n",
-    "    f.write('\\n\\nSummary Length Statistics\\n')\n",
-    "    f.write(str(train_data['summary_length'].describe()))\n"
+    "plt.show()\n"
    ]
   }
  ],
