--- a/notebooks/02_data_preprocessing.ipynb
+++ b/notebooks/02_data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2da9a463-f5ba-4671-aefa-7e498fb05038",
    "metadata": {},
    "outputs": [],
@@ -24,9 +24,9 @@
     "    text = re.sub(r'\\s+', ' ', text)  # remove extra spaces\n",
     "    return text.strip()\n",
     "\n",
-    "# Apply text cleaning\n",
-    "train_data['summary_clean'] = train_data['summary'].apply(clean_text)\n",
-    "test_data['summary_clean'] = test_data['summary'].apply(clean_text)\n",
+    "# Apply text cleaning and fill NaN values\n",
+    "train_data['summary_clean'] = train_data['summary'].fillna('').apply(clean_text)\n",
+    "test_data['summary_clean'] = test_data['summary'].fillna('').apply(clean_text)\n",
     "\n",
     "# Convert text data to numerical format using TF-IDF\n",
     "vectorizer = TfidfVectorizer(max_features=1000)\n",
