--- a/notebooks/05_generate_submission.ipynb
+++ b/notebooks/05_generate_submission.ipynb
@@ -46,7 +46,9 @@
     "})\n",
     "\n",
     "# Save the submission file\n",
-    "submission_df.to_csv('../data/submission.csv', index=False)\n"
+    "submission_df.to_csv('../data/submission.csv', index=False)\n",
+    "\n",
+    "print(\"Submission file generated successfully!\")\n"
    ]
   }
  ],
