--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -10,6 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Train Data Info:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 159998 entries, 0 to 159997\n",
       "Data columns (total 3 columns):\n",
@@ -20,22 +21,44 @@
       " 2   severity  159998 non-null  object\n",
       "dtypes: int64(1), object(2)\n",
       "memory usage: 3.7+ MB\n",
-      "None\n",
-      "             bug_id\n",
-      "count  1.599980e+05\n",
-      "mean   7.482937e+05\n",
-      "std    2.220960e+05\n",
-      "min    3.655690e+05\n",
-      "25%    5.609778e+05\n",
-      "50%    7.502555e+05\n",
-      "75%    9.332742e+05\n",
-      "max    1.143398e+06\n",
+      "\n",
+      "Train Data Head:\n",
       "   bug_id                                            summary  severity\n",
       "0  365569                  Remove workaround from bug 297227    normal\n",
       "1  365578    Print Preview crashes on any URL in gtk2 builds  critical\n",
       "2  365582                     Lines are not showing in table     major\n",
       "3  365584  Firefox render ÛÏsimplified ArabicÛ font fa...    normal\n",
-      "4  365597             Crash [@ nsINodeInfo::NodeInfoManager]  critical\n"
+      "4  365597             Crash [@ nsINodeInfo::NodeInfoManager]  critical\n",
+      "\n",
+      "Test Data Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 86094 entries, 0 to 86093\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   bug_id   86094 non-null  int64 \n",
+      " 1   summary  86094 non-null  object\n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 1.3+ MB\n",
+      "\n",
+      "Test Data Head:\n",
+      "    bug_id                                            summary\n",
+      "0  1143402  Firefox claims to be not the default browser w...\n",
+      "1  1143405  Background of html and body element are not ap...\n",
+      "2  1143409  Mouse input breaks after using window.showModa...\n",
+      "3  1143411  Build failure with next freetype version/curre...\n",
+      "4  1143417  HTML element is not treated as root inside for...\n",
+      "\n",
+      "Missing Values in Train Data:\n",
+      "bug_id      0\n",
+      "summary     0\n",
+      "severity    0\n",
+      "dtype: int64\n",
+      "\n",
+      "Missing Values in Test Data:\n",
+      "bug_id     0\n",
+      "summary    0\n",
+      "dtype: int64\n"
      ]
     },
     {
@@ -80,29 +103,18 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Load the training and testing data\n",
+    "# Load the training data\n",
     "train_data = pd.read_csv('../data/raw/bugs-train.csv')\n",
-    "test_data = pd.read_csv('../data/raw/bugs-test.csv')\n",
     "\n",
-    "# Display basic information about the training data\n",
+    "# Display basic information about the dataset\n",
     "print(\"Train Data Info:\")\n",
     "train_data.info()\n",
     "print(\"\\nTrain Data Head:\")\n",
     "print(train_data.head())\n",
     "\n",
-    "# Display basic information about the testing data\n",
-    "print(\"\\nTest Data Info:\")\n",
-    "test_data.info()\n",
-    "print(\"\\nTest Data Head:\")\n",
-    "print(test_data.head())\n",
-    "\n",
-    "# Check for missing values in the training data\n",
+    "# Check for missing values in the data\n",
     "print(\"\\nMissing Values in Train Data:\")\n",
     "print(train_data.isnull().sum())\n",
-    "\n",
-    "# Check for missing values in the testing data\n",
-    "print(\"\\nMissing Values in Test Data:\")\n",
-    "print(test_data.isnull().sum())\n",
     "\n",
     "# Visualize the distribution of severity classes\n",
     "sns.countplot(x='severity', data=train_data)\n",
@@ -115,7 +127,14 @@
     "\n",
     "sns.histplot(train_data['summary_length'], bins=30, kde=True)\n",
     "plt.title('Distribution of Summary Lengths')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# Save the exploratory data analysis report\n",
+    "with open('../reports/EDA_report.txt', 'w') as f:\n",
+    "    f.write('EDA Report\\n\\n')\n",
+    "    f.write(str(train_data.describe()))\n",
+    "    f.write('\\n\\nSummary Length Statistics\\n')\n",
+    "    f.write(str(train_data['summary_length'].describe()))\n"
    ]
   }
  ],
