--- a/notebooks/02_data_preprocessing.ipynb
+++ b/notebooks/02_data_preprocessing.ipynb
@@ -10,11 +10,11 @@
     "# Import necessary libraries\n",
     "import pandas as pd\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import re\n",
     "\n",
-    "# Load the training and testing data\n",
+    "# Load the training data\n",
     "train_data = pd.read_csv('../data/raw/bugs-train.csv')\n",
-    "test_data = pd.read_csv('../data/raw/bugs-test.csv')\n",
     "\n",
     "# Define a function to clean text data\n",
     "def clean_text(text):\n",
@@ -26,20 +26,22 @@
     "\n",
     "# Apply text cleaning and fill NaN values\n",
     "train_data['summary_clean'] = train_data['summary'].fillna('').apply(clean_text)\n",
-    "test_data['summary_clean'] = test_data['summary'].fillna('').apply(clean_text)\n",
+    "\n",
+    "# Split the data into training and validation sets\n",
+    "train_data_split, val_data_split = train_test_split(train_data, test_size=0.2, random_state=42)\n",
     "\n",
     "# Convert text data to numerical format using TF-IDF\n",
     "vectorizer = TfidfVectorizer(max_features=1000)\n",
-    "X_train = vectorizer.fit_transform(train_data['summary_clean'])\n",
-    "X_test = vectorizer.transform(test_data['summary_clean'])\n",
+    "X_train = vectorizer.fit_transform(train_data_split['summary_clean'])\n",
+    "X_val = vectorizer.transform(val_data_split['summary_clean'])\n",
     "\n",
     "# Save the processed data\n",
     "pd.DataFrame(X_train.toarray(), columns=vectorizer.get_feature_names_out()).to_csv('../data/processed/train_preprocessed.csv', index=False)\n",
-    "pd.DataFrame(X_test.toarray(), columns=vectorizer.get_feature_names_out()).to_csv('../data/processed/test_preprocessed.csv', index=False)\n",
+    "pd.DataFrame(X_val.toarray(), columns=vectorizer.get_feature_names_out()).to_csv('../data/processed/val_preprocessed.csv', index=False)\n",
     "\n",
     "# Save the cleaned summary columns for future use\n",
-    "train_data[['summary_clean', 'severity']].to_csv('../data/processed/train_cleaned.csv', index=False)\n",
-    "test_data[['summary_clean']].to_csv('../data/processed/test_cleaned.csv', index=False)\n"
+    "train_data_split[['summary_clean', 'severity']].to_csv('../data/processed/train_cleaned.csv', index=False)\n",
+    "val_data_split[['summary_clean', 'severity']].to_csv('../data/processed/val_cleaned.csv', index=False)\n"
    ]
   }
  ],
