--- a/notebooks/04_model_evaluation.ipynb
+++ b/notebooks/04_model_evaluation.ipynb
@@ -16,35 +16,35 @@
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "\n",
-    "# Load the preprocessed test data\n",
-    "X_test = pd.read_csv('../data/processed/test_preprocessed.csv')\n",
-    "y_test = pd.read_csv('../data/raw/bugs-test.csv')['severity']\n",
+    "# Load the preprocessed validation data\n",
+    "X_val = pd.read_csv('../data/processed/val_preprocessed.csv')\n",
+    "y_val = pd.read_csv('../data/processed/val_cleaned.csv')['severity']\n",
     "\n",
     "# Load and evaluate the logistic regression model\n",
     "log_reg = joblib.load('../models/log_reg_model.pkl')\n",
-    "log_reg_pred = log_reg.predict(X_test)\n",
-    "log_reg_report = classification_report(y_test, log_reg_pred)\n",
+    "log_reg_pred = log_reg.predict(X_val)\n",
+    "log_reg_report = classification_report(y_val, log_reg_pred)\n",
     "print(\"Logistic Regression Report:\\n\", log_reg_report)\n",
     "\n",
     "# Load and evaluate the AdaBoost model\n",
     "ada = joblib.load('../models/ada_model.pkl')\n",
-    "ada_pred = ada.predict(X_test)\n",
-    "ada_report = classification_report(y_test, ada_pred)\n",
+    "ada_pred = ada.predict(X_val)\n",
+    "ada_report = classification_report(y_val, ada_pred)\n",
     "print(\"AdaBoost Report:\\n\", ada_report)\n",
     "\n",
     "# Evaluate the LSTM model\n",
-    "# Load the original test data to preprocess it for the LSTM model\n",
-    "test_data = pd.read_csv('../data/raw/bugs-test.csv')\n",
+    "# Load the original validation data to preprocess it for the LSTM model\n",
+    "val_data = pd.read_csv('../data/processed/val_cleaned.csv')\n",
     "tokenizer = Tokenizer(num_words=5000, lower=True, split=' ')\n",
-    "tokenizer.fit_on_texts(test_data['summary_clean'].values)\n",
-    "X_test_seq = tokenizer.texts_to_sequences(test_data['summary_clean'].values)\n",
-    "X_test_pad = pad_sequences(X_test_seq, maxlen=X_test_seq.shape[1])\n",
+    "tokenizer.fit_on_texts(val_data['summary_clean'].values)\n",
+    "X_val_seq = tokenizer.texts_to_sequences(val_data['summary_clean'].values)\n",
+    "X_val_pad = pad_sequences(X_val_seq, maxlen=X_val_seq.shape[1])\n",
     "\n",
     "# Load the LSTM model\n",
     "model = load_model('../models/lstm_model.h5')\n",
-    "lstm_pred = model.predict(X_test_pad)\n",
+    "lstm_pred = model.predict(X_val_pad)\n",
     "lstm_pred_labels = np.argmax(lstm_pred, axis=1)\n",
-    "lstm_report = classification_report(y_test, lstm_pred_labels)\n",
+    "lstm_report = classification_report(y_val, lstm_pred_labels)\n",
     "print(\"LSTM Report:\\n\", lstm_report)\n"
    ]
   }
@@ -65,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
